Final update week 08 assignment
